# rustPiano

./: Cargo.toml  README.md
flutter_guis/: README.md  pubspec.yaml
flutter_guis/android/app/: build.gradle
flutter_guis/android/app/src/main/: AndroidManifest.xml
flutter_guis/android/app/src/main/kotlin/com/example/flutter_guis/: MainActivity.kt
flutter_guis/ios/Runner/: Info.plist
flutter_guis/ios/Runner.xcodeproj/: project.pbxproj
flutter_guis/lib/: main.dart
flutter_guis/linux/: CMakeLists.txt
flutter_guis/linux/runner/: my_application.cc
flutter_guis/macos/Runner.xcodeproj/: project.pbxproj
flutter_guis/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_guis/macos/Runner/Configs/: AppInfo.xcconfig
flutter_guis/web/: index.html  manifest.json
flutter_guis/windows/: CMakeLists.txt
flutter_guis/windows/runner/: Runner.rc  main.cpp
src/: RealTimeSynth.rs  lib.rs  main.rs  messages.rs  popup.rs  synth.rs
src/popupExe/freddy/data/flutter_assets/: AssetManifest.json  NOTICES.Z
