#[allow(non_snake_case)]
[package]
name = "rustPiano"
version = "0.1.0"
edition = "2021"

[dependencies]
midir = "0.10.1"
rustysynth = "1.3.3"
cpal = "0.15.3"
winit = "0.28"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
egui = "0.25.0"
eframe = "0.25.0"
egui_extras = { version = "0.25.0", features = ["image"] }
image = "0.25.1"